--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -172,7 +172,7 @@
       <hr ng-hide="noReviews">
 
       <div class="review-list">
-        <h2 ng-show="noReviews" class="no-review">No Reviews - Be the first!</h2>
+        <h3 ng-show="noReviews" class="no-review">No Crowd Reviews - Be the first!</h3>
         <div ng-hide="noReviews" class="review" ng-repeat="review in spot.reviews">
           <div class="user">
             <img ng-src="{{review.author.pic}}">
