--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -460,7 +460,9 @@ input[type='text']:focus {
 }
 
 @media screen and (max-width: $break-small){
-  .navbar-inner {
+  .navbar {
+  .navbar-inner,
+  .navbar-inverse {
     //position: fixed;
     width: 100%;
     height: 60px;
@@ -475,7 +477,7 @@ input[type='text']:focus {
     }
 
     .brand {
-      //width: 100%;
+      width: 100%;
       margin-left: -16px;
       margin-bottom: 10px;
       margin-right: 0;
@@ -504,6 +506,7 @@ input[type='text']:focus {
     .search-btn {
       display: none;
     }
+  }
   }
 }
 
@@ -556,6 +559,29 @@ input[type='text']:focus {
   }
 
   .addthis_toolbox {
+    display: none;
+  }
+
+  form {
+    width: 100%
+  }
+
+  .find-spot {
+    input {
+      width: 130px;
+      margin-left: 2px;
+    }
+    select {
+      width: 75px;
+      margin-left: 0px;
+    }
+  }
+
+  .search-icon {
+    display: inline-block;
+  }
+
+  .search-btn {
     display: none;
   }
 }
@@ -978,7 +1004,7 @@ input[type='text']:focus {
       .listing-nums {
         width: 100px;
         float: left;
-        margin-top: 20px;
+        margin-top: 15px;
       }
 
       .add-spot-btn {
@@ -992,6 +1018,12 @@ input[type='text']:focus {
       .side-col {
         display: none;
       }
+
+      .add-spot {
+        float: right;
+        margin: 15px 0 0 0;
+      }
+
     }
 
     .listing {
