Fix find-nearby placement.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1385,8 +1385,8 @@ input[type='text']:focus {
   }
 
   .find-nearby {
-    margin: 0 44px 20px 0;
-    text-align: right;
+    margin: 0 0 20px 100px;
+    text-align: left;
 
     h3 {
       display: inline-block;
