--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -167,7 +167,7 @@
   <div class="reviews" ng-show="doneInitializing">
     <div class="main-col">
       <h6 class="review-nums" ng-hide="noReviews">{{startIndex}}-{{reviewsDisplayedCount}} of {{spot.review_count}}</h6>
-      <button class="btn add-review" ng-click="addReview(spot.id)">Add Review</button>
+      <button class="btn add-review" ng-click="addReview(spot.id)">Add Crowd Review</button>
 
       <hr ng-hide="noReviews">
 
