--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1384,6 +1384,13 @@ input[type='text']:focus {
     margin-top: 0;
   }
 
+  .review-list {
+    h3 {
+      margin-top: -2px;
+    }
+  }
+
+
   .find-nearby {
     margin: 0 0 20px 100px;
     text-align: left;
@@ -1527,6 +1534,11 @@ input[type='text']:focus {
 
     .no-review {
       font-size: 15px;
+      margin-left: 10px;
+    }
+
+    .add-review {
+      float: none;
     }
   }
 }
