--- a/app/views/main.html
+++ b/app/views/main.html
@@ -22,9 +22,19 @@
         <h3>Social</h3>
         <div class="type-blurb">
           <h4>"Have a drink,</h4>
-          <h4>and hear your friends"</h4>
+          <h4>hear your friends"</h4>
         </div>
       </div>
+
+      <div class="spot favits" ng-click="goHome()">
+        <img class="b4cm-icon" src="../images/favit-icon.png">
+        <h3>Favits</h3>
+        <div class="type-blurb">
+          <h4>"A list of</h4>
+          <h4>your favorite places"</h4>
+        </div>
+      </div>
+
     </div>
   </div>
 
