Make watches stickier so site doesn't look so empty with few users.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1217,6 +1217,11 @@ input[type='text']:focus {
       //margin-left: 18px;
     }
 
+    .old-date {
+      color: #ccc;
+      size: 10px;
+    }
+
     .watch-image {
       float: left;
       height: 50px;
